--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marios-mart-solution",
+  "name": "wicked-sales-js-solution",
   "version": "1.0.0",
   "description": "Reference implemenation of a Node.js &amp; React shopping cart app.",
   "main": "server/index.js",
@@ -116,13 +116,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mil-amirian/marios-mart.git"
+    "url": "git+https://github.com/mil-amirian/wicked-sales-js.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mil-amirian/marios-mart/issues"
+    "url": "https://github.com/mil-amirian/wicked-sales-js/issues"
   },
-  "homepage": "https://github.com/mil-amirian/marios-mart#readme"
+  "homepage": "https://github.com/mil-amirian/wicked-sales-js#readme"
 }
